// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout() should return an object with the total and the list of items 1`] = `
{
  "items": [
    {
      "product": {
        "price": 35388,
        "title": "Adidas Running Shoes",
      },
      "quantity": 2,
    },
    {
      "product": {
        "price": 41872,
        "title": "Nike Socks",
      },
      "quantity": 1,
    },
  ],
  "total": {
    "amount": 112648,
    "currency": "BRL",
    "precision": 2,
  },
}
`;

exports[`Cart checkout() should return an object with the total and the list of items 2`] = `
{
  "formatted": "R$1,126.48",
  "items": [
    {
      "product": {
        "price": 35388,
        "title": "Adidas Running Shoes",
      },
      "quantity": 2,
    },
    {
      "product": {
        "price": 41872,
        "title": "Nike Socks",
      },
      "quantity": 1,
    },
  ],
  "total": {
    "amount": 112648,
    "currency": "BRL",
    "precision": 2,
  },
}
`;
